# AETHER-LITE

./: .gitignore  CHANGELOG.md  KB-state.md  README.md  SECURITY.md  Technical_Blueprint__AETHER-LITE_Project (2).md  ci.yml
.windsurf/: KB-state.md
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/androidTest/java/com/b_one/aether/: AetherInstrumentedTests.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/b_one/aether/: AetherApplication.kt  MainActivity.kt
android/app/src/main/java/com/b_one/aether/security/: PeerTrust.kt  SecureVault.kt
android/app/src/main/java/com/b_one/aether/service/: AetherService.kt  ManifestVerification.kt
android/app/src/main/java/com/b_one/aether/util/: CanonicalJson.kt
android/app/src/main/java/uniffi/aether_core/: aether_core.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/test/java/com/b_one/aether/: AetherUnitTests.kt
docs/: AETHER_Project_Knowledge_Base_(KB-state) (3).md  SECURITY_AUDIT_FINAL_2026-04-16.md  VHEATM-KB-state.md
ios/AetherApp/AetherCore/: module.modulemap
ios/AetherApp/Managers/: AetherManager.swift  ManifestVerification.swift  PeerTrust.swift  Vault.swift
ios/AetherAppTests/: AetherTests.swift
rust_core/: Cargo.toml  build.rs
rust_core/src/: aether.udl  canonical_json.rs  config.rs  decompressor.rs  error.rs  lib.rs  network.rs  patcher.rs  security.rs  transport_encryption.rs
rust_core/tests/: integration_tests.rs
tools/: forge.py  forge_test.py  requirements.txt
tools/uniffi-bindgen-kotlin/: Cargo.toml
tools/uniffi-bindgen-kotlin/src/: main.rs
